=== 0.4.4 (2007-12-17)

* Implemented Database#rename_table (#104).

* Fixed drop_index in mysql adapter (#103).

* Added ALTER TABLE specs for postgres, sqlite and mysql adapters. Added custom alter_table behavior for sqlite and mysql adapters (#101, #102).

* Added direct Database API for altering tables.

* Added Database#alter_table method with support for adding, dropping, renaming, modifying columns and adding and droppping indexes.

* Added #unique schema method for defining unique indexes (thanks Dado).

* Implemented unfolding of #each calls inside sequelizer blocks (thanks Jim Morris).

=== 0.4.3 (2007-12-15)

* Fixed Dataset#update to accept strings (#98).

* Fixed Model.[] to raise for boolean argument (#97).

* Added Database#add_index method (thanks coda.hale).

* Added error reporting for filtering on comparison not in a block (thanks Jim Morris).

* Added support for inline index definition (thanks Dado).

* Added Database#create_table! method for forcibly creating a table (thanks Dado).

* Added support for using Dataset#update with block.

* Changed subscript access to use | operator.

* Fixed subscript access in sequelizer.

* Added support for subscript access using Symbol#/ operator.

=== 0.4.2.2 (2007-12-10)

* Improved code coverage.

* Fixed Dataset#count to work properly with datasets with fixed SQL (when using #fetch).

* Added Model.create_with_params method that filters the given parameters accordring to the model's columns (thanks Aman Gupta). 

=== 0.4.2.1 (2007-12-09)

* Refactored and fixed Dataset#reverse_order to work with field quoting (thanks Christian).

* Fixed problem with field quoting in insert statements.

* Changed sequelizer code to silently fail on any error when requiring parsetree and ruby2ruby.

* Added Database#create_view, #create_or_replace_view and #drop_view methods. Also implemented Dataset#create_view and #create_or_replace_view convenience methods.

* Keep DRY by re-using Model#[]= from method_missing.
